--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-sm navbar-light"style="background-color: #e3f2fd;"> 
             <h1 class="navbar-brand mx-auto">Mariya Kirichenko</h1>
             <div class= "navbar-nav flex-row">
-                <a class="nav-item nav-link mx-2 py-3" href="./index-for-homework.html">About</a>
+                <a class="nav-item nav-link mx-2 py-3" href="index.html">About</a>
                 <a class="nav-item nav-link mx-2 py-3 active " href="./portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link mx-2 py-3" href="./contact.html">Contact</a>
             </div>
